
syntax = "proto3";
package ibc.lightclients.wasm.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "ibc/core/client/v1/client.proto";

option go_package = "github.com/cosmos/ibc-go/v7/modules/light-clients/08-wasm/types";

// Wasm light client's Client state
message ClientState {
  option (gogoproto.goproto_getters)      = false;
  bytes                     data          = 1;
  bytes                     code_id       = 2;
  ibc.core.client.v1.Height latest_height = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"latest_height\""];
  optional google.protobuf.Any inner      = 100;
}

// Wasm light client's ConsensusState
message ConsensusState {
  option (gogoproto.goproto_getters) = false;
  bytes data                         = 1;

  // timestamp that corresponds to the block height in which the ConsensusState
  // was stored.
  uint64 timestamp = 2;
  optional google.protobuf.Any inner = 100;
}

// Wasm light client Header
message Header {
  option (gogoproto.goproto_getters) = false;

  bytes                     data   = 1;
  ibc.core.client.v1.Height height = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"height\""];
  optional google.protobuf.Any inner = 100;
}

// Wasm light client Misbehaviour
message Misbehaviour {
  option (gogoproto.goproto_getters) = false;

  bytes data = 1;
  optional google.protobuf.Any inner = 100;
}
